feat: 🚧 created Navbar & hero page

--- a/package.json
+++ b/package.json
@@ -4,27 +4,31 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force"
-  },
+			"dev": "vite --host",
+			"build": "run-p type-check \"build-only {@}\" --",
+			"preview": "vite preview",
+			"test:unit": "vitest",
+			"build-only": "vite build",
+			"type-check": "vue-tsc --build --force"
+		},
   "dependencies": {
-    "@adobe/leonardo-contrast-colors": "^1.0.0",
-    "@vueuse/components": "^10.9.0",
-    "@vueuse/core": "^10.9.0",
-    "boxicons": "^2.1.4",
-    "hsluv": "^1.0.1",
-    "lightningcss": "^1.24.1",
-    "notivue": "^2.4.4",
-    "pinia": "^2.1.7",
-    "theme-colors": "^0.1.0",
-    "unimport": "^3.7.1",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
-  },
+			"@adobe/leonardo-contrast-colors": "^1.0.0",
+			"@types/chroma-js": "^2.4.4",
+			"@types/tinycolor2": "^1.4.6",
+			"@vueuse/components": "^10.9.0",
+			"@vueuse/core": "^10.9.0",
+			"boxicons": "^2.1.4",
+			"chroma-js": "^2.4.2",
+			"hsluv": "^1.0.1",
+			"lightningcss": "^1.24.1",
+			"notivue": "^2.4.4",
+			"pinia": "^2.1.7",
+			"theme-colors": "^0.1.0",
+			"tinycolor2": "^1.6.0",
+			"unimport": "^3.7.1",
+			"vue": "^3.4.21",
+			"vue-router": "^4.3.0"
+		},
   "devDependencies": {
     "@biomejs/biome": "1.7.1",
     "@tsconfig/node20": "^20.1.4",
